# hobot_xlm

./: CHANGELOG.md  CMakeLists.txt  README.md  README_cn.md  package.xml
config/DeepSeek_R1_Distill_Qwen_1.5B_config/: config.json  param.json
config/DeepSeek_R1_Distill_Qwen_7B_config/: param.json
include/: util.h  xlm.h  xlm_node.h
launch/: llm_chat.launch.py
lib/: libfftw3.so.3  libhlog.so.1  libhlog_receiver.so.1.7.6
src/: main.cpp  util.cpp  xlm_node.cpp
